1/JavaParser.java
/* Generated By:JavaCC: Do not edit this line. JavaParser.java */
import java.io.*;

public class JavaParser implements JavaParserConstants {

    public static void main(String[] args) throws Exception {
      //StringReader in=new StringReader();
      if (args.length < 1){
        System.err.println("Not enough argument");
        System.exit(1);
      }
      JavaParser javaParser=new JavaParser(new FileInputStream(new File(args[0])));
      javaParser.Start();
    }

  static final public void Start() throws ParseException {
    trace_call("Start");
    try {
      Program();
    } finally {
      trace_return("Start");
    }
  }

  static final public void Program() throws ParseException {
    trace_call("Program");
    try {
      MainClass();
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
        ClassDecl();
      }
      jj_consume_token(0);
    } finally {
      trace_return("Program");
    }
  }

  static final public void MainClass() throws ParseException {
    trace_call("MainClass");
    try {
  Token t;
      jj_consume_token(CLASS);
      t = jj_consume_token(IDENTIFIER);
   System.out.println( "main " + t.image);
      jj_consume_token(OPEN_BRACE);
      jj_consume_token(PUBLIC);
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(OPEN_PAR);
      if (jj_2_2(2)) {
        jj_consume_token(STRING);
        jj_consume_token(OPEN_BRACKET);
        jj_consume_token(CLOSE_BRACKET);
        jj_consume_token(IDENTIFIER);
      } else {
        ;
      }
      jj_consume_token(CLOSE_PAR);
      jj_consume_token(OPEN_BRACE);
      Statement();
      jj_consume_token(CLOSE_BRACE);
      jj_consume_token(CLOSE_BRACE);
    } finally {
      trace_return("MainClass");
    }
  }

  static final public void ClassDecl() throws ParseException {
    trace_call("ClassDecl");
    try {
  Token t;
      jj_consume_token(CLASS);
      t = jj_consume_token(IDENTIFIER);
                           System.out.println("class " + t.image);
      if (jj_2_3(2)) {
        jj_consume_token(EXTENDS);
        jj_consume_token(IDENTIFIER);
      } else {
        ;
      }
      jj_consume_token(OPEN_BRACE);
      label_2:
      while (true) {
        if (jj_2_4(2)) {
          ;
        } else {
          break label_2;
        }
        VarDecl();
      }
      label_3:
      while (true) {
        if (jj_2_5(2)) {
          ;
        } else {
          break label_3;
        }
        MethodDecl();
      }
      jj_consume_token(CLOSE_BRACE);
    } finally {
      trace_return("ClassDecl");
    }
  }

  static final public void VarDecl() throws ParseException {
    trace_call("VarDecl");
    try {
  Token t;
   System.out.println("here");
      t = jj_consume_token(TYPE);
              System.out.println("type " + t.image);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(SEMI_COLON);
    } finally {
      trace_return("VarDecl");
    }
  }

  static final public void FormalList() throws ParseException {
    trace_call("FormalList");
    try {
  Token t;
      jj_consume_token(TYPE);
      t = jj_consume_token(IDENTIFIER);
                          System.out.println("type " + t.image);
      label_4:
      while (true) {
        if (jj_2_6(2)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(COMMA);
        jj_consume_token(TYPE);
        t = jj_consume_token(IDENTIFIER);
                                   System.out.println("type " + t.image);
      }
    } finally {
      trace_return("FormalList");
    }
  }

  static final public void MethodDecl() throws ParseException {
    trace_call("MethodDecl");
    try {
  Token t;
   System.out.println("method");
      jj_consume_token(PUBLIC);
      jj_consume_token(TYPE);
      t = jj_consume_token(IDENTIFIER);
                                   System.out.println("method " + t.image);
      jj_consume_token(OPEN_PAR);
      label_5:
      while (true) {
        if (jj_2_7(2)) {
          ;
        } else {
          break label_5;
        }
        FormalList();
      }
      jj_consume_token(CLOSE_PAR);
      jj_consume_token(OPEN_BRACE);
      label_6:
      while (true) {
        if (jj_2_8(2)) {
          ;
        } else {
          break label_6;
        }
        Statement();
      }
      jj_consume_token(RETURN);
      jj_consume_token(IDENTIFIER);
      t = jj_consume_token(SEMI_COLON);
                                                                     System.out.println("return " + t.image);
      jj_consume_token(CLOSE_BRACE);
    } finally {
      trace_return("MethodDecl");
    }
  }

  static final public void Statement() throws ParseException {
    trace_call("Statement");
    try {
      if (jj_2_10(2)) {
        jj_consume_token(IDENTIFIER);
        if (jj_2_9(2)) {
          jj_consume_token(OPEN_BRACKET);
          Expression();
          jj_consume_token(CLOSE_BRACKET);
        } else {
          ;
        }
        jj_consume_token(EQUALS);
        Expression();
        jj_consume_token(SEMI_COLON);
      } else if (jj_2_11(2)) {
        jj_consume_token(PRINT);
        jj_consume_token(OPEN_PAR);
        Expression();
        jj_consume_token(CLOSE_PAR);
        jj_consume_token(SEMI_COLON);
      } else if (jj_2_12(2)) {
        IfStatement();
      } else if (jj_2_13(2)) {
        WhileStatement();
      } else if (jj_2_14(2)) {
        StatementBr();
      } else if (jj_2_15(2)) {
        VarDecl();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Statement");
    }
  }

  static final public void StatementBr() throws ParseException {
    trace_call("StatementBr");
    try {
      jj_consume_token(OPEN_BRACE);
      label_7:
      while (true) {
        if (jj_2_16(2)) {
          ;
        } else {
          break label_7;
        }
        Statement();
      }
      jj_consume_token(CLOSE_BRACE);
    } finally {
      trace_return("StatementBr");
    }
  }

  static final public void IfStatement() throws ParseException {
    trace_call("IfStatement");
    try {
      jj_consume_token(IF);
      jj_consume_token(OPEN_PAR);
      Expression();
      jj_consume_token(CLOSE_PAR);
      if (jj_2_17(2)) {
        jj_consume_token(ELSE);
        Statement();
      } else {
        ;
      }
    } finally {
      trace_return("IfStatement");
    }
  }

  static final public void WhileStatement() throws ParseException {
    trace_call("WhileStatement");
    try {
      jj_consume_token(WHILE);
      jj_consume_token(OPEN_PAR);
      Expression();
      jj_consume_token(CLOSE_PAR);
      Statement();
    } finally {
      trace_return("WhileStatement");
    }
  }

  static final public void Expression() throws ParseException, NumberFormatException {
    trace_call("Expression");
    try {
      if (jj_2_20(2)) {
        jj_consume_token(OPEN_PAR);
        Expression();
        jj_consume_token(CLOSE_PAR);
      } else if (jj_2_21(2)) {
        jj_consume_token(51);
        Expression();
      } else if (jj_2_22(2)) {
        jj_consume_token(LOGIC_CONSTANT);
      } else if (jj_2_23(2)) {
        jj_consume_token(IDENTIFIER);
      } else if (jj_2_24(2)) {
        jj_consume_token(THIS);
      } else if (jj_2_25(2)) {
        jj_consume_token(NEW);
        if (jj_2_18(2)) {
          jj_consume_token(TYPE);
          jj_consume_token(OPEN_BRACKET);
          Expression();
          jj_consume_token(CLOSE_BRACKET);
        } else if (jj_2_19(2)) {
          jj_consume_token(IDENTIFIER);
          jj_consume_token(OPEN_PAR);
          jj_consume_token(CLOSE_PAR);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Expression");
    }
  }

  static final public void Primary() throws ParseException, NumberFormatException {
    trace_call("Primary");
    try {
  Token t ;
  double d;
      if (jj_2_26(2)) {
        t = jj_consume_token(INTEGER_CONSTANT);
      } else if (jj_2_27(2)) {
        t = jj_consume_token(LOGIC_CONSTANT);
      } else if (jj_2_28(2)) {
        jj_consume_token(OPEN_PAR);
        Expression();
        jj_consume_token(CLOSE_PAR);
      } else if (jj_2_29(2)) {
        jj_consume_token(MINUS);
        Primary();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Primary");
    }
  }

  static final public void Term() throws ParseException, NumberFormatException {
    trace_call("Term");
    try {
      Primary();
      label_8:
      while (true) {
        if (jj_2_30(2)) {
          ;
        } else {
          break label_8;
        }
        if (jj_2_31(2)) {
          jj_consume_token(TIMES);
          Primary();
        } else if (jj_2_32(2)) {
          jj_consume_token(DIVIDE);
          Primary();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("Term");
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_3_15() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_8() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_14() {
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3_13() {
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3_12() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3_11() {
    if (jj_scan_token(PRINT)) return true;
    if (jj_scan_token(OPEN_PAR)) return true;
    return false;
  }

  static private boolean jj_3_19() {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(OPEN_PAR)) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_scan_token(IDENTIFIER)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_9()) jj_scanpos = xsp;
    if (jj_scan_token(EQUALS)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(PUBLIC)) return true;
    if (jj_scan_token(TYPE)) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_scan_token(TYPE)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(TYPE)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_scan_token(TYPE)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3_32() {
    if (jj_scan_token(DIVIDE)) return true;
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_17() {
    if (jj_scan_token(ELSE)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_30() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_31()) {
    jj_scanpos = xsp;
    if (jj_3_32()) return true;
    }
    return false;
  }

  static private boolean jj_3_31() {
    if (jj_scan_token(TIMES)) return true;
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_scan_token(EXTENDS)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_scan_token(CLASS)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3_29() {
    if (jj_scan_token(MINUS)) return true;
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3_28() {
    if (jj_scan_token(OPEN_PAR)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3_27() {
    if (jj_scan_token(LOGIC_CONSTANT)) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_26()) {
    jj_scanpos = xsp;
    if (jj_3_27()) {
    jj_scanpos = xsp;
    if (jj_3_28()) {
    jj_scanpos = xsp;
    if (jj_3_29()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3_18() {
    if (jj_scan_token(TYPE)) return true;
    if (jj_scan_token(OPEN_BRACKET)) return true;
    return false;
  }

  static private boolean jj_3_26() {
    if (jj_scan_token(INTEGER_CONSTANT)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_scan_token(STRING)) return true;
    if (jj_scan_token(OPEN_BRACKET)) return true;
    return false;
  }

  static private boolean jj_3_25() {
    if (jj_scan_token(NEW)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_18()) {
    jj_scanpos = xsp;
    if (jj_3_19()) return true;
    }
    return false;
  }

  static private boolean jj_3_24() {
    if (jj_scan_token(THIS)) return true;
    return false;
  }

  static private boolean jj_3_23() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3_22() {
    if (jj_scan_token(LOGIC_CONSTANT)) return true;
    return false;
  }

  static private boolean jj_3_21() {
    if (jj_scan_token(51)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_20()) {
    jj_scanpos = xsp;
    if (jj_3_21()) {
    jj_scanpos = xsp;
    if (jj_3_22()) {
    jj_scanpos = xsp;
    if (jj_3_23()) {
    jj_scanpos = xsp;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_20() {
    if (jj_scan_token(OPEN_PAR)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_16() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(WHILE)) return true;
    if (jj_scan_token(OPEN_PAR)) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(IF)) return true;
    if (jj_scan_token(OPEN_PAR)) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_scan_token(OPEN_BRACKET)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(OPEN_BRACE)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_16()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(CLOSE_BRACE)) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public JavaParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  /** Whether we are looking ahead. */
  static private boolean jj_lookingAhead = false;
  static private boolean jj_semLA;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[32];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public JavaParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public JavaParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new JavaParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public JavaParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new JavaParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
